# cpp-warning-notifier

./: .gitignore  CMakeLists.txt  LICENSE  README.md  action.yml  package-lock.json  package.json  rollup.config.ts  source.cpp  tsconfig.json
.github/workflows/: test.yml
action/: package-lock.json  package.json  tsconfig.json
action/src/: index.ts
src/: core.ts  index.ts  server.ts  types.d.ts
test/: source.cpp
worker/: package-lock.json  package.json  tsconfig.json  wrangler.toml
worker/src/: index.ts
